# undecorate

./: CMakeLists.txt  README.md  undecorate.c  undecorate.py
