cmake_minimum_required(VERSION 3.0)
if(CMAKE_BUILD_TYPE MATCHES "^CMAKE_BUILD_TYPE$")
    set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build, options are: None(CMAKE_CXX_FLAGS or CMAKE_C_FLAGS used) Debug Release RelWithDebInfo MinSizeRel." FORCE)
    set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "" Release Debug RelWithDebInfo MinSizeRel)
endif()
project(undecorate C)
find_package(X11 REQUIRED)
add_executable(undecorate undecorate.c)
target_link_libraries(undecorate ${X11_X11_LIB})
install(TARGETS undecorate RUNTIME DESTINATION bin)
